tests/expectations/compiler/libraries/lib_interface_conflict_fail.out
Error [ECHI03712001]: Interface `Child` has a conflicting definition for `compute` inherited from `Parent`. Members with the same name must have identical signatures.
    --> compiler-test:6:1
     |
   6 | interface Child : conflict_lib::Parent {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   7 |     fn compute(x: u64) -> u64;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   8 | }
     | ^
     |
     = Ensure both interfaces define the same signature for this member, or rename one of them.
